# naxe

./: .gitignore  AGENTS.md  README.md  naxe.db  naxe.db-shm  naxe.db-wal  pyproject.toml
docs/design/: approval-context.md  comment-feedback-thread.md  requeue-traceability.md
examples/: example_job.yaml
naxe/: auth.py  cli.py  cli_config.py  config.py  http_app.py  init_cmd.py  resolver.py  schema.py  serve_cmd.py  server.py  store.py  tools.py  tui.py  watch.py
naxe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
naxe/handlers/: __init__.py  _common.py  approval.py  audit.py  dependencies.py  jobs.py  tasks.py  templates.py
naxe/store/: __init__.py  agents.py  approval.py  comments.py  core.py  jobs.py  tasks.py  templates.py
naxe/tui/: __init__.py  app.py  client.py  screens.py  theme.py  widgets.py
tests/: test_auth.py  test_resolver.py  test_server_ctxvar.py  test_store.py
