[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naxe"
version = "0.3.0"
description = "Dependency-aware task graph engine for AI agents (MCP server)"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.11"
authors = [
    {name = "Skyler Meints"}
]
keywords = ["mcp", "agents", "tasks", "ai", "llm", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "mcp>=1.0.0",
    "psycopg[binary]>=3.1",
    "pyyaml>=6.0",
    "rich>=13.9.4",
    "starlette>=0.40.0",
    "textual>=0.52.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://naxe.run"
Source = "https://github.com/naxe-run/naxe"
Issues = "https://github.com/naxe-run/naxe/issues"

[project.scripts]
naxe = "naxe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["naxe*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
